--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,21 +1,25 @@
 /* Light theme (default) */
 :root {
+  // common
   --color-bg: #ffffff;
-  --color-bg-gray: rgb(229, 231, 235);
-  --color-bg-black: #000000;
+  --color-bg-black: #1c1e24;
   --color-text: #111827;
-  --color-muted: #6b7280;
-  --color-border: #e5e7eb;
   --color-box-shadow: rgba(0, 0, 0, 0.4);
+
+  // timeline
+  --color-timeline: #e5e7eb; // timeline
+  --color-timeline-active: #1c1e24; // timeline active, dot
 }
 
 /* Dark theme */
 html.dark {
-  --color-bg: #000000;
-  --color-bg-gray: rgb(255, 255, 255);
+  // common
+  --color-bg: #1c1e24;
   --color-bg-black: #ffffff;
-  --color-text: #f9fafb;
-  --color-muted: #9ca3af;
-  --color-border: #374151;
+  --color-text: #e8e8e8;
   --color-box-shadow: rgba(255, 255, 255, 0.4);
+
+  // timeline
+  --color-timeline: #f5f5f5; // timeline
+  --color-timeline-active: #57534d; // timeline active, dot
 }
